# BelVoice

./: .gitignore  README.md  pyproject.toml  test.aac  test.aiff  test.flac  test.json  test.opus
framework/: requirements.txt
framework/belvoice/asr/: SplitData.py
framework/src/: example_asr.py  example_tts.py
framework/src/asr/: ASR_Facebook.py  ASR_Gemini.py  ASR_Nvidia.py
framework/src/examples/: example_asr_facebook.py  example_asr_gemini.py  example_asr_nvidia.py  example_normalization_llm.py  example_normalization_simple.py  example_phonemization_belg2p.py  example_split_pyannote.py  example_split_silero.py  example_stress_grammar_llm.py  example_stress_grammardb.py  example_stress_stat.py  example_tts_coqui.py  example_tts_omnivoice.py
framework/src/normalization/: __init__.py
framework/src/phonemization/: PhonemizationBelG2P.py
framework/src/split/: Merge_Graph.py  Merge_Window.py  SplitData.py  Split_Pyannote.py  Split_SileroVAD.py
framework/src/stress/: StressHomonymsStat.py  StressLLM.py  StressMarkingGrammarDB.py  stresses-stat.json
framework/src/tts/: TTSCoquiTTS.py  TTSOmniVoice.py
framework_examples/: example_asr_facebook.py  example_asr_gemini.py  example_asr_nvidia.py  example_normalization_llm.py  example_normalization_simple.py  example_phonemization_belg2p.py  example_split_pyannote.py  example_split_silero.py  example_stress_grammar_llm.py  example_stress_stat.py  example_tts_coqui.py  example_tts_omnivoice.py
tools/export_grammardb/: .gitignore  .project  pom.xml
tools/stress_benchmark/: README.md  stress_benchmark.py
(+22 files in other folders)
